# dwk-conf

./: .bloatware.sh  .parser.sh  README.md  gcloud.sh  k3s.sh
.github/workflows/: deploy.yml  main.yaml
gw/manifests/: gateway.gke.yml
log_output/: .dockerignore  Cargo.toml  Dockerfile  README.md  kustomization.yml  main.sh
log_output/manifests/: deployment.yml  gateway.gke.yml  namespace.yml  route.gke.yml  service.yml
log_output/src/: main.rs
log_server/: Cargo.toml  README.md
log_server/src/: main.rs
manifests/base/: deployment.yml  ingress.yml  pvc.yml  service.yml
pingpong/: Cargo.toml  Dockerfile  README.md
pingpong/manifests/: deployment.yml
pingpong/src/: main.rs
postgres/manifests/: config-project.yml  config.yml  service-project.yml  service.yml  statefulSet-project.yml  statefulSet.yml
project/: Cargo.toml  Dockerfile  README.md
project/manifests/: deployment.yml
project/src/: main.rs
todo_app/: .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md  kustomization.yml  tailwind.css
todo_app/manifests/: deployment.yml  ingress.yml  namespace.yml  service.yml
todo_app/manifests/backend/: deployment.yml
todo_app/manifests/base/: kustomization.yml
todo_app/manifests/overlays/prod/: kustomization.yml
todo_app/manifests/postgres/: statefulSet.yml
todo_app/manifests/reminder/: cronJob.yml
todo_app/src/: conf.rs  main.rs  server.rs
todo_backend/: Cargo.toml  README.md
todo_backend/src/: main.rs
todo_reminder/: Cargo.toml  Dockerfile  README.md
todo_reminder/manifests/: cronJob.yml
todo_reminder/src/: main.rs
(+14 files in other folders)
