[package]
name = "todo_app"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7.2", features = ["fullstack"] }
once_cell = "1.21.3"
reqwest = { version = "0.12.28", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }

[features]
default = ["web"]
web = ["dioxus/web"]
server = ["dioxus/server"]
