[package]
name = "todo_app"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7.2", features = ["fullstack"] }
reqwest = { version = "0.12.28", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = "1.48.0"

[features]
default = ["web"]
web = ["dioxus/web"]
server = ["dioxus/server"]
