[package]
name = "todo_reminder"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.28", default-features = false, features = [
    "rustls-tls",
] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
